[package]
name = "fingerprint-lookup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
blowfish = { version = "0.9", features = ["bcrypt"] }
generic-array = "0.14.5"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.41"
js-sys = "0.3.44"
base64 = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[dependencies.web-sys]
version = "0.3"
features = [
  "Window", "Navigator", "Location", "Crypto", "SubtleCrypto", "AesCbcParams", "CryptoKey", "AesCbcParams"
]